# keras_efficient_kan

./: .gitignore  README.md  pyproject.toml  run_tests.py
.github/workflows/: keras_kan_ci.yml
keras_efficient_kan/: __init__.py  kan.py
tests/: test_jax.py  test_tensorflow.py  test_torch.py
workflows/: keras_kan_ci.yml
